# hft-backtest-engine

./: CMakeLists.txt  LICENSE  Makefile  README.md  equity_curve.csv
apps/: benchmark.cpp  run_backtest.cpp  validate_fidelity.cpp
include/backtest/: analytics.hpp  backtester.hpp  data_feed.hpp  friction.hpp  matching_engine.hpp  order.hpp  order_book.hpp  portfolio.hpp  strategy.hpp  types.hpp
scripts/: generate_data.py  plot_pnl.py
strategies/: market_maker.hpp  mean_reversion.hpp
tests/: test_friction.cpp  test_matching.cpp  test_order_book.cpp  test_util.hpp
